--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -4,20 +4,20 @@
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
 
 .modal-child {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
 }
 
 .login-form-container {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
 }
 
 .login-form {
@@ -25,19 +25,151 @@
   justify-content: center;
   flex-direction: column;
   background-color: #fff;
+  width: 280px;
+  padding: 10px 0 20px 20px;
+}
+.login-form-signup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+}
+
+.login-form-signin {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 20%);
 }
 
 .login-input {
-  margin-left: 20px;
+  width: 90%;
+  height: 32px;
+  line-height: 32px;
+  border: 1px solid #eee;
+  border-radius: 2px;
+
+  font-size: 8px;
+  padding-left: 10px;
+
+
+}
+
+.login-input:focus{
+  border-radius: 0;
+  border: 1px solid #aaa;
+}
+
+.login-form h4 {
+  padding: 10px 12px 10px 0;
+  width: 90%;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 4px;
 }
 
 .login-form-box {
   outline: 1px solid black;
-  padding: 20px;
+  // padding: 20px;
   background: white;
   position: relative;
 }
 
 .session-submit {
-   text-transform: capitalize;
+  width: 94%;
+  padding: 10px 20px;
+  color: #fff;
+  background: #da3743;
+  border: #b8222d;
+  border-radius: 2px;
+  transition: background-color 300ms ease-out;
  }
+
+ .session-submit:hover{
+   background-color: #b8222d;
+ }
+
+
+ .close-x {
+   position: absolute;
+   top: 10px;
+   right: 16px;
+   cursor: pointer;
+   font-size: 30px;
+ }
+
+ .login-signup {
+   display: flex;
+   justify-content: space-between;
+   height: 36px;
+   align-items: center;
+   border-bottom: 1px solid #eee;
+   border-top: 1px solid #eee;
+   margin-bottom: 20px;
+   margin-top: 20px;
+ }
+
+ .btn {
+   border-style:none;
+   font-size: 8px;
+   width: 50px;
+   height: 20px;
+   border-radius: 3px;
+ }
+.btn:focus{
+  outline:none;
+}
+
+.btn-blue {
+   background: #237b98;
+   border-color: #1c627a;
+   color: #fff;
+ }
+
+ .btn-blue:hover{
+   background: #1c627a;
+   transition: background-color 300ms ease-out;
+ }
+
+ .log-out {
+   margin-right: 10px;
+ }
+
+.btn-demo {
+  // border: 1px solid red;
+  width: 24px;
+  margin-right: 20px;
+}
+.nav-greeting {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.header-name {
+  font-size: 10px;
+  margin-right: 6px;
+  padding-top: 2px;
+}
+
+.error-ul {
+  font-size: 10px;
+  line-height: 12px;
+  color: #d30303;
+}
+
+.top-bar-logo-name {
+  display: none;
+}
+
+.top-bar-logo-link {
+  // background: url(../../app/images/startable.png);
+  // background: url(/assets/images/startable.png);
+  background-image: image-url("startable.png") ;
+  background-repeat: no-repeat;
+  background-position: 0 2px;
+  width: 110px;
+  height: 36px;
+  display:block;
+  background-size: 100%;
+  margin-left: 22px;
+
+}
