--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <script>
         window.currentUser = {
           "id": <%= current_user.id %>,
-          "first_name": "<%= current_user.first_name %>",
+          "firstName": "<%= current_user.first_name %>",
           "email": "<%= current_user.email %>"
         };
       </script>
