--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -110,13 +110,17 @@
 
  .btn {
    border-style:none;
-   font-size: 8px;
+   font-size: 10px;
    width: 50px;
    height: 20px;
    border-radius: 3px;
  }
 .btn:focus{
   outline:none;
+}
+
+.btn:hover{
+  color: #237b98;
 }
 
 .btn-blue {
@@ -126,6 +130,7 @@
  }
 
  .btn-blue:hover{
+   color: #fff;
    background: #1c627a;
    transition: background-color 300ms ease-out;
  }
@@ -154,6 +159,7 @@
   font-size: 10px;
   line-height: 12px;
   color: #d30303;
+  margin-bottom: 4px;
 }
 
 .top-bar-logo-name {
