--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,3 +2,7 @@
 @import "base/global.scss";
 @import "session/session_form.scss";
 @import "navbar/navbar.scss";
+@import "modal/modal.scss";
+
+@import "restaurants/add_restaurant.scss";
+@import "restaurants/restaurants_list.scss";
