--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -1,5 +1,5 @@
 .restaurant-list {
-  position: relative;
+  // position: relative;
   max-width: 70%;
   border: 1px solid #ccc;
   margin: 0 auto;
