--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -1,15 +1,64 @@
 .search-form-container {
-    border: 1px solid black;
-    height: 60px;
-    display: flex;
-      justify-content: space-evenly;
-      align-items: center;
+    border: 1px solid #fff;
+    height: 180px;
+    width: 70%;
+    min-width: 800px;
+    // display: flex;
+    // justify-content: space-evenly;
+    margin: 10px auto 0;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 6px 0px #ccc;
+}
+
+.search-form-container h3 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  // font-family: BrandonText,Helvetica Neue,Helvetica,Arial,sans-serif;
+  padding: 30px 0 10px 0;
 }
 
 .search-form {
-  display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  text-align: center;
+  height: 40%;
+  padding: 20px 0 0 0;
+
+}
+
+.search-form input {
+  display: inline-block;
+  height: 50px;
+}
+.search-input {
+  border: 1px solid #ccc;
+  width: 260px;
+  font-size: 15px;
+  padding-left: 10px;
+}
+
+.search-form input[type="submit"] {
+  height: 52px;
+  width: 140px;
+  font-size: 15px;
+}
+
+.search-select {
+  width: 100px;
+  border: 1px solid #ccc;
+  border-right: none;
+}
+.submit-button {
+  background-color: #da3743;
+  border-color: #b8222d;
+  color: #fff;
+  // height: 60px;
+  padding: 0 10px;
+}
+
+.submit-button:hover{
+  background: #E5656E;
 }
 
 .refine-search-form {
