--- a/app/assets/stylesheets/session/session_form.scss
+++ b/app/assets/stylesheets/session/session_form.scss
@@ -111,12 +111,12 @@
 
 .btn-demo {
   margin-right: 20px;
-  background: #E5656E;
+  background: #DA3743;
   color: #fff;
 }
 
 .btn-demo:hover{
-  background: #DA3743;
+  background: #b8222d;
 }
 
 .error-ul {
