--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -2,7 +2,7 @@
   // position: relative;
   max-width: 70%;
   border: 1px solid #ccc;
-  margin: 0 auto;
+  margin: 20px auto;
   background: #fff;
   border-radius: 5px;
   box-shadow: 0px 3px 6px 0px #ccc;
