--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -1,14 +1,20 @@
 .search-form-container {
     border: 1px solid #fff;
     height: 180px;
-    width: 70%;
-    min-width: 800px;
+    width: 800px;
     // display: flex;
     // justify-content: space-evenly;
-    margin: 10px auto 0;
+    margin: 0 auto;
     background: #fff;
     border-radius: 5px;
     box-shadow: 0px 2px 6px 0px #ccc;
+    // position: absolute; left: 50%; top: 50%;
+    // margin-top: -300px;    /* 高度的一半 */
+    // margin-left: -400px;    /* 宽度的一半 */
+    // transform: translate(-50%, -50%);
+
+    position: absolute; left: 0; right: 0; top: 20%;
+    margin: auto;
 }
 
 .search-form-container h3 {
@@ -31,6 +37,7 @@
   display: inline-block;
   height: 50px;
 }
+
 .search-input {
   border: 1px solid #ccc;
   width: 260px;
@@ -49,6 +56,7 @@
   border: 1px solid #ccc;
   border-right: none;
 }
+
 .submit-button {
   background-color: #da3743;
   border-color: #b8222d;
@@ -58,7 +66,7 @@
 }
 
 .submit-button:hover{
-  background: #E5656E;
+  background: #b8222d;
 }
 
 .refine-search-form {
