--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -72,6 +72,7 @@ textarea
 {
 	margin:0;
 	border:0;
+	border-radius: 0;
 	padding:0;
 	display:inline-block;
 	vertical-align:middle;
@@ -88,6 +89,10 @@ textarea
 input:focus
 {
 	outline:0;
+}
+
+select:focus{
+  outline:none;
 }
 
 button:focus
