--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -3,6 +3,7 @@
   height: 94%;
   // border-bottom: 1px solid #eee;
   padding-top: 6px;
+  background-color: #f7f7f7;
 }
 
 .navbar-session {
@@ -39,9 +40,4 @@
   display:block;
   background-size: 100%;
   margin-left: 24px;
-}
-
-#navbar-hero {
-  max-height: 300px;
-  overflow: hidden;
 }
