--- a/app/assets/stylesheets/restaurants/add_restaurant.scss
+++ b/app/assets/stylesheets/restaurants/add_restaurant.scss
@@ -1,7 +1,8 @@
 .add-restaurant-container {
   position: relative;
   width: 100%;
-  background: rgba(0,0,0,0.9);
+  // background: rgba(0,0,0,0.9);
+  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523421045/add_restaurant_img.jpg");
   margin-top: -40px;
 }
 
@@ -14,17 +15,17 @@
   font-weight: bold;
   color: #fff;
 
-  text-shadow: 2px 2px 8px rgba(75, 75, 75, 1);
+  text-shadow: 2px 0px 8px rgba(75, 75, 75, 1);
   position: relative;
-  bottom: -40px;
+  bottom: -50px;
 }
 
 .add-restaurant-form {
   position: relative;
-  bottom: -40px;
+  bottom: -60px;
   width: 60%;
-  // min-width: 400px;
-  max-width: 800px;
+  min-width: 400px;
+  // max-width: 800px;
   height: 100%;
   margin: 0 auto;
   border-radius: 5px;
@@ -34,6 +35,8 @@
   padding: 40px 20px 30px 20px;
   box-shadow: 0px 3px 6px 0px #ccc;
 }
+
+
 
 .add-input {
   width: 45%;
@@ -48,7 +51,7 @@
 }
 
 .add-input-1 {
-  width: 94%;
+  width: 93%;
 }
 
 .add-input-3 {
@@ -66,5 +69,10 @@
   border-radius: 24px;
   transition: background-color 300ms ease-out;
   margin: 16px auto;
+}
 
+@media (max-width: 1000px) {
+  .add-input, .add-input-1,.add-input-3{
+    width: 100%;
+  }
 }
