--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -100,6 +100,13 @@ button:focus
 	outline:0;
 }
 
+textarea {
+	resize: none;
+}
+
+textarea:focus {
+	outline:0;
+}
 
 /* Box Sizing Reset
 -----------------------------------------------*/
