Add review star and change the restaurant li to link

--- a/app/assets/stylesheets/restaurants/restaurant_detail.scss
+++ b/app/assets/stylesheets/restaurants/restaurant_detail.scss
@@ -92,12 +92,18 @@
 .restaurant-nav-detail {
   display: flex;
   border-top: 1px solid #ccc;
-  padding: 15px 0;
+  padding: 10px 0;
   border-bottom: 1px solid #ccc;
+  align-items: center;
 }
+
+
 
 .restaurant-nav-detail div {
   padding-right: 20px;
+}
+
+.rating_icon {
 }
 
 .restaurant-content-about {
@@ -122,9 +128,4 @@
 .restaurant-reviews {
   background: #fff;
   padding: 10px 0;
-}
-
-
-.disabled-btn {
-
 }
