--- a/app/assets/stylesheets/reviews/review_form.scss
+++ b/app/assets/stylesheets/reviews/review_form.scss
@@ -20,10 +20,6 @@
   padding-top: 6px;
 }
 
-.star {
-  padding-right: 10px;
-  padding-left: 2px;
-}
 
 .review-form-middle {
   margin-top: 10px;
@@ -36,4 +32,14 @@
   width: 100%;
   overflow-y:visible;
   padding: 10px
+}
+
+.stars input[type="radio"] {
+  // visibility:hidden;
+}
+
+.star {
+  padding-right: 10px;
+  padding-left: 2px;
+  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523511580/rating_icon_empty.png");
 }
