--- a/app/assets/stylesheets/reviews/review_form.scss
+++ b/app/assets/stylesheets/reviews/review_form.scss
@@ -1,7 +1,7 @@
 .review-form-container {
   border: 1px solid #ccc;
   background-color: #fff;
-  padding: 20px;
+  padding: 0 20px;
   border-radius: 3px;
 }
 
@@ -17,7 +17,7 @@
 .review-radio {
   width: 100%;
   text-align: center;
-  padding-top: 6px;
+  padding: 8px 0;
 }
 
 
