--- a/app/assets/stylesheets/session/session_form.scss
+++ b/app/assets/stylesheets/session/session_form.scss
@@ -60,6 +60,7 @@
 }
 
 .session-submit {
+  font-size: 14px;
   width: 94%;
   padding: 16px 20px;
   color: #fff;
@@ -142,4 +143,8 @@
   font-size: 15px;
   width: 80px;
   height: 34px;
+}
+
+.demo-login {
+  margin-top: 12px;
 }
