--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -20,7 +20,7 @@
   margin-top: -120px;
 }
 
-.cities {
+.cities, .cuisines {
   margin-top: 40px;
   padding-bottom: 2px;
   border: 1px solid #fff;
@@ -29,18 +29,17 @@
   box-shadow: 0px 3px 6px 0px #ccc;
 }
 
-.cities h3 {
-  // border-bottom: 1px solid #ccc;
+.cities h3, .cuisines h3{
+  border-bottom: 1px solid #ccc;
   margin: 20px 0;
   font-size: 24px;
-  padding: 10px 0;
+  padding: 10px 0 20px 0;
   margin: 10px 20px;
   font-weight: bold;
 }
 
 .city-list {
-  border-top: 1px solid #ccc;
-  padding-top: 20px;
+  padding-top: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -142,14 +141,23 @@
   justify-content: space-between;
   margin: 0 auto;
   color: #fff;
-  font-size: 20px;
-
-  margin-top: 60px;
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 30px;
 }
 
 .footer-body i {
-  font-size: 24px;
+  font-size: 20px;
   padding-right: 12px;
+}
+
+.footer-about {
+  width: 320px;
+}
+
+.footer-links p {
+  display: inline;
+  line-height: 24px;
 }
 
 @media (max-width: 1660px) {
