fix the img bug in index page

--- a/app/assets/stylesheets/slide/slide.scss
+++ b/app/assets/stylesheets/slide/slide.scss
@@ -24,7 +24,7 @@
 }
 .slider.one {
  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523595721/cuisine_italian.jpg");
- background-size: auto 240px;
+ background-size: 230px 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
