change the raido button in the review form

--- a/app/assets/stylesheets/restaurants/restaurant_detail.scss
+++ b/app/assets/stylesheets/restaurants/restaurant_detail.scss
@@ -23,7 +23,8 @@
   position: relative;
   display: flex;
   width: 84%;
-  margin: -66px auto;
+  margin: -66px auto 0;
+  padding-bottom: 40px;
 
 }
 .restaurant-main-left {
