--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -25,7 +25,7 @@
   padding: 20px 0 20px 90px;
 }
 
-.restaurant-li:last-of-type {
+.restaurant-list-section:last-of-type {
   border-bottom: none;
 }
 
