--- a/app/assets/stylesheets/reviews/review_form.scss
+++ b/app/assets/stylesheets/reviews/review_form.scss
@@ -43,3 +43,12 @@
   padding-left: 2px;
   background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523511580/rating_icon_empty.png");
 }
+
+.rating-stars {
+  text-align: center;
+  padding-top: 8px;
+  font-size: 18px;
+}
+#full {
+  color: #ffe500;
+}
