--- a/app/assets/stylesheets/restaurants/add_restaurant.scss
+++ b/app/assets/stylesheets/restaurants/add_restaurant.scss
@@ -27,13 +27,13 @@
   min-width: 400px;
   // max-width: 800px;
   height: 100%;
-  margin: 0 auto;
+  margin: 0 auto 120px;
   border-radius: 5px;
   background: #fff;
   text-align: center;
   border: 1px solid #ccc;
   padding: 40px 20px 30px 20px;
-  box-shadow: 0px 3px 6px 0px #ccc;
+  box-shadow: 0px 2px 2px 0px #ccc;
 }
 
 
