--- a/app/assets/stylesheets/slide/slide.scss
+++ b/app/assets/stylesheets/slide/slide.scss
@@ -17,6 +17,11 @@
  text-shadow: 1px 1px 1px #000;
  background-color: rgba(255, 255, 255, 0.6);
  cursor: pointer;
+ // opacity: 0.9;
+}
+
+.slider:hover {
+  opacity: 0.8;
 }
 
 .slider p:first-of-type {
