--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -140,10 +140,10 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  color: #fff;
   font-size: 15px;
   line-height: 20px;
   margin-top: 30px;
+    color: #ccc;
 }
 
 .footer-body i {
@@ -151,13 +151,38 @@
   padding-right: 12px;
 }
 
+
 .footer-about {
   width: 320px;
 }
-
+.footer-links a {
+  text-decoration: none;
+    color: #ccc;
+}
 .footer-links p {
   display: inline;
   line-height: 24px;
+}
+
+///back to top button in app.jsx
+#myBtn {
+    // display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
 }
 
 @media (max-width: 1660px) {
