--- a/app/assets/stylesheets/restaurants/restaurant_detail.scss
+++ b/app/assets/stylesheets/restaurants/restaurant_detail.scss
@@ -16,7 +16,7 @@
   width: 100%;
   object-fit: cover;
   position: relative;
-  top: -300px;
+  top: -260px;
 }
 
 .restaurant-main-container {
@@ -102,6 +102,10 @@
 
 .restaurant-nav-detail div {
   padding-right: 20px;
+}
+
+.restaurant-nav-detail div i {
+  padding-right: 3px;
 }
 
 .rating_icon {
