Add heart icon to the favorite restaurant list

--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -69,6 +69,12 @@
   line-height: 36px;
 }
 
+.restaurant-name i {
+  color: #DA3743;
+  line-height: 36px;
+  margin-left: 3px;
+}
+
 
 .restaurant-name:hover {
   cursor: pointer;
