max character limit for review body

--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -4,7 +4,7 @@
 // }
 
 .hero-img-container {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523400632/home_background.jpg") no-repeat;
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523400632/home_background.jpg") no-repeat;
   background-size: cover;
   background-position: 0 -40px;
   height: 360px;
@@ -64,37 +64,37 @@
 }
 
 #new_york {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398619/ny_city.jpg") no-repeat;
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398619/ny_city.jpg") no-repeat;
   background-size: cover;
 }
 
 #los_angeles {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398699/la_city.jpg");
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398699/la_city.jpg");
   background-size: cover;
 }
 
 #chicago {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398619/chicago_city.jpg");
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398619/chicago_city.jpg");
   background-size: cover;
 }
 
 #san_francisco {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398619/sf_city.jpg");
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398619/sf_city.jpg");
   background-size: cover;
 }
 
 #washington {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398619/dc_city.jpg");
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398619/dc_city.jpg");
   background-size: cover;
 }
 
 #seattle {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523398619/seattle_city.jpg");
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523398619/seattle_city.jpg");
   background-size: cover;
 }
 
 .section-footer {
-  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523146697/footer.jpg");
+  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523146697/footer.jpg");
   background-size: cover;
   background-position: 0 -240px;
 
