--- a/app/assets/stylesheets/restaurants/add_restaurant.scss
+++ b/app/assets/stylesheets/restaurants/add_restaurant.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   // background: rgba(0,0,0,0.9);
-  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523421045/add_restaurant_img.jpg");
+  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523421045/add_restaurant_img.jpg");
   margin-top: -40px;
 }
 
