--- a/app/assets/stylesheets/reviews/review_form.scss
+++ b/app/assets/stylesheets/reviews/review_form.scss
@@ -41,7 +41,7 @@
 .star {
   padding-right: 10px;
   padding-left: 2px;
-  background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523511580/rating_icon_empty.png");
+  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523511580/rating_icon_empty.png");
 }
 
 .rating-stars {
