--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -44,7 +44,7 @@
   width: 58%;
   font-size: 15px;
   padding-left: 40px;
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523509175/search_icon.png") no-repeat;
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523509175/search_icon.png") no-repeat;
   background-size: 25px 25px;
   background-position: 10px 13px;
 }
