--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>StarTable</title>
-    <%= favicon_link_tag source="http://res.cloudinary.com/chengzii/image/upload/c_scale,w_50/v1523389939/star.png" %>
+    <%= favicon_link_tag source="https://res.cloudinary.com/chengzii/image/upload/c_scale,w_50/v1523389939/star.png" %>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
