--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -12,7 +12,7 @@
 }
 
 .restaurantList-img-container {
-  background: url("http://res.cloudinary.com/chengzii/image/upload/v1523397594/restaurantList.jpg") no-repeat;
+  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523397594/restaurantList.jpg") no-repeat;
   background-size: cover;
   background-position: 0 -100px;
   height: 360px;
