--- a/app/assets/stylesheets/slide/slide.scss
+++ b/app/assets/stylesheets/slide/slide.scss
@@ -28,19 +28,19 @@
   padding-top: 100px;
 }
 .slider.one {
- background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523595721/cuisine_italian.jpg");
+ background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595721/cuisine_italian.jpg");
  background-size: 240px 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 .slider.two {
- background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523595638/cuisine_seafood.jpg");
+ background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595638/cuisine_seafood.jpg");
  background-size: 240px 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 .slider.three {
- background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523595575/cuisine_american.jpg");
+ background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595575/cuisine_american.jpg");
  background-size: 240px 240px;
  background-position: center;
  background-repeat: no-repeat;
@@ -53,7 +53,7 @@
 }
 
 .slider.five {
- background-image: url("http://res.cloudinary.com/chengzii/image/upload/v1523595675/cuisine_french.jpg");
+ background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595675/cuisine_french.jpg");
  background-size: 240px 240px;
  background-position: center;
  background-repeat: no-repeat;
