--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -12,8 +12,22 @@
   align-items: center;
   height: 56px;
   border-bottom: 1px solid #eee;
-
 }
+
+.nav-header {
+  display: flex;
+  align-items: center;
+}
+
+.nav-header p {
+  font-size: 15px;
+  margin-left: 2px;
+  margin-top: 4px;
+  color: #DA3743;
+  // color: #237b98;
+}
+
+
 .nav-greeting {
   display: flex;
   justify-content: flex-end;
