--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -1,9 +1,9 @@
 
 .navbar-container {
   height: 94%;
-  // border-bottom: 1px solid #eee;
   padding-top: 6px;
   background-color: #f7f7f7;
+  min-width: 770px;
 }
 
 .navbar-session {
