--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -84,6 +84,12 @@
   }
 }
 
+@media (max-width: 1052px) {
+  .search-form-container h3 {
+    font-size: 30px;
+  }
+}
+
 @media (max-width: 920px) {
   .search-form-container h3 {
     font-size: 24px;
