--- a/app/assets/stylesheets/reservation/reservation_form.scss
+++ b/app/assets/stylesheets/reservation/reservation_form.scss
@@ -1,6 +1,8 @@
 .reservation-show {
   border: 1px solid #ccc;
-  border-radius: 5px;
+  // border-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   padding: 4px 20px;
   margin-bottom: 20px;
 }
