--- a/app/assets/stylesheets/restaurants/restaurant_detail.scss
+++ b/app/assets/stylesheets/restaurants/restaurant_detail.scss
@@ -33,7 +33,9 @@
   background-color: #fff;
   border: 1px solid #ccc;
   padding: 20px;
-  border-radius: 5px;
+  // border-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   margin-right: 20px;
 }
 
